# thinking-os

./: .gitignore  Cargo.toml  LICENSE  README.md  setup.sh
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  question.md
.github/workflows/: ci.yml
apps/cli/: Cargo.toml
apps/cli/src/: main.rs
apps/obsidian-plugin/: package.json
apps/vscode-extension/: package.json
apps/web-dashboard/: package.json
crates/embeddings/: Cargo.toml
crates/mcp-server/: Cargo.toml
crates/mcp-server/src/: lib.rs
crates/ontology/: Cargo.toml
crates/parser/: Cargo.toml
crates/parser/src/: lib.rs
crates/reasoning/: Cargo.toml
crates/reasoning/src/: lib.rs
crates/semantic-ir/: Cargo.toml
crates/semantic-ir/src/: lib.rs
crates/storage/: Cargo.toml
crates/storage/src/: lib.rs
python/thinkingos/: README.md  pyproject.toml  thinking.events.jsonl
python/thinkingos/src/thinkingos/: __init__.py  adversary.py  cli.py  config.py  engine.py  graph.py  models.py  ontology.py  parser.py  planner.py  prompts.py  providers.py  reasoning.py  store.py  utils.py
