[package]
name = "cli"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
walkdir = "2.4"
parser = { path = "../../crates/parser" }
storage = { path = "../../crates/storage" }
semantic-ir = { path = "../../crates/semantic-ir" }
reasoning = { path = "../../crates/reasoning" }
mcp-server = { path = "../../crates/mcp-server" }
anyhow = "1.0"
