[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "thinkingos"
version = "0.1.0"
description = "ThinkingOS Python prototype — event-sourced reasoning over a markdown knowledge vault"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = []

[project.scripts]
thinkingos = "thinkingos.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/thinkingos"]
